--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "dev": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dandara Navarro",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.6.0",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.26",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
